added author to mentor guide

--- a/mentorguide.html
+++ b/mentorguide.html
@@ -281,8 +281,7 @@
 			<p><a href="#pairedmentor" onclick="make_visible('pairedmentor')">Paired Mentors</a></p>
 			<p><a href="#floatingmentor" onclick="make_visible('floatingmentor')">Floating Mentors</a></p>
 			<h3>Thanks</h3>
-			<br>
-			<p>The following people have contributed to this guide: Shauna Gordon-McKeon, Sheila Miguez</p>
+			<p>The following people have contributed to this guide: Shauna Gordon-McKeon, Sheila Miguez, Coral Sheldon-Hess</p>
 			<h3>Feedback</h3>
 			<p>Have feedback on this guide, or Open Source Comes to Campus generally? File an issue in <a href="https://github.com/openhatch/open-source-comes-to-campus/issues">the issue tracker</a> or <a href="http://openhatch.readthedocs.org/en/latest/community/contact.html">contact us</a>.</p>
 			<h3>Share</h3>
