Re-organizies gh-pages, adds lessons folder & first draft of curriculum page

--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <!doctype html>
+<head>
+    <title>Open Source Comes to Campus materials and guides</title>
+    <link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./static/css/style.css" type="text/css">
+</head>
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+<body class="home page" data-spy="scroll" data-target="#sidenav" screen_capture_injected="true">
 
-    <title>Open Source Comes to Campus by openhatch</title>
-  </head>
-
-  <body>
-    <header>
-      <div class="inner">
-        <h1>Open Source Comes to Campus</h1>
-        <h2>Planning Guide</h2>
-        <a href="https://github.com/openhatch/open-source-comes-to-campus" class="button"><small>View project on</small>GitHub</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
-	<span class="octicon octicon-link"></span>Welcome</h3>
-	<p>This page is a place for us to host web-based OSCTC materials. So far the only thing here is the <a href="./mentorguide.html">mentor guide</a>.</p>
-      </div>
+<div id="wrap">
+    <div class="content">
+        <span class="octicon octicon-link"></span>Welcome</h3>
+	    <p>This page is a place for us to host web-based OSCTC materials, such as:</p>
+	    <ul>
+	        <li><a href="./lessons/index.html">Lessons</a>.</li>
+	        <li><a href="./mentorguide.html">Mentor guide</a>.</li>
+	    </ul>
     </div>
+</div>
 
-  
-  </body>
+</body>
 </html>
