Add what is open source lesson

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -137,12 +137,12 @@
                     <p>We currently have a presenter-led version which we're not terribly satisfied with.  We're working on improving it and creating a self-guided version as well.</p>
                     <p>Links: <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum/History_and_Ethics_of_Free_Software/Ethics_history_talk">presenter-led</a>.</p>
                 </li>
-                <li class="mix community">
+                <li class="mix community ready standard">
                     <h2>Career Panel</h2>
                     <p>Career panels are an excellent opportunity for students to learn more about what being an open source professional is like.  If there are enough in person mentors we recommend running an in-person panel.  We can also arrange a remote career panel via hangouts (or a similar tool).</p>
                     <p>Links: you can read more about our career panels, including questions to ask, <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum/Career_Panel">here</a>.
                 </li>
-                <li class="mix contributions-workshop">
+                <li class="mix contributions-workshop ready standard">
                     <h2>Finding a Project</h2>
                     <p>Walks people through the steps of finding a project to contribute to.</p>
                     <p>Links: <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum/Finding_a_Project">self-guided</a></p>
@@ -158,7 +158,7 @@
                     <p>Coming soon!</p>
                 </li>
                 
-                <li class="mix contributions-workshop">
+                <li class="mix contributions-workshop ready standard">
                     <h2>Project-focused Contributions</h2>
                     <p>You can read about our past version of the workshop <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum#The_workshop_itself">here</a>, an updated version is coming soon.</p>
                 </li>
@@ -178,6 +178,10 @@
                 <li class="mix misc">
                     <h2>Free/open source licensing</h2>
                     <p>Coming soon!</p>
+                </li>
+                <li class="mix ready standard">
+                    <h2>Wrap up</h2>
+                    <p>You can see our wrap-up guide <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum#Wrap_Up_2">here</a>.</p>
                 </li>
                 <li class="gap"></li> <!-- "gap" elements fill in the gaps in justified grid -->
       </ul>
