--- a/lessons/index.html
+++ b/lessons/index.html
@@ -80,7 +80,7 @@
                     <h2>What is Open Source?</h2>
                     <p>Defines open source, talks about popular projects, highlights FLOSS values.</p>
                     <p>Takes approximately 20 minutes.  Presenter-led version can be done without internet if downloaded ahead of time.</p>
-                    <p>Links: current version is presenter-led only and connected to tools: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a>.</p>
+                    <p>Links: <a href="../what-is-open-source/#/">presenter-led</a>, <a href="../what-is-open-source/self-guided.html">self-guided</a></p>
                     
                 </li>
                 <li class="mix intro">
