Add first draft of newcomer tasks: setup lesson

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -46,7 +46,7 @@
                         <h3>Activity Category</h3>
                         <ul>
                             <li class="filter" data-filter="intro">Introduction and Setup</li>
-                            <li class="filter" data-filter="communication-tools">Communication Tools</li>
+                            <li class="filter" data-filter="communication">Communication</li>
                             <li class="filter" data-filter="version-control">Version Control</li>
                             <li class="filter" data-filter="contributions-workshop">Contributions Workshop</li>
                             <li class="filter" data-filter="community">Community</li>
@@ -88,29 +88,18 @@
                     <p>Coming soon.</p>
                 </li>
                
-                <li class="mix communications-tools standard">
+                <li class="mix communication standard">
                     <h2>Communication Norms</h2>
                     <p>Coming soon.</p>
                 </li>
-                <li class="mix communications-tools ready standard">
-                    <h2>Mailing Lists</h2>
-                    <p>Introduces mailing lists.</p>
-                    <p>Very brief - can be done in under 5 minutes.</p>
-                    <p>Links: current version is presenter-led only and connected to other tools & intro to open source: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a>.</p>
+                <li class="mix communication ready standard">
+                    <h2>Communication Tools</h2>
+                    <p>Introduces mailing lists, IRC and issue trackers.</p>
+                    <p>Usually takes about 25 minutes.  Easy to edit down to something shorter by removing activities or sections.</p>
+                    <p>Links: <a href="./comm-tools/#/">presenter-led</a>, <a href="./comm-tools/self-guided.html">self-guided</a></p>
                 </li>
-                 <li class="mix communications-tools standard ready">
-                    <h2>IRC</h2>
-                    <p>Introduces IRC.</p>
-                    <p>Typically takes about 10-15 minutes.</p>
-                    <p>Links: current version is presenter-led only and connected to other tools & intro to open source: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a>.</p>
-                </li>
-                <li class="mix communications-tools standard ready">
-                    <h2>Issue Trackers</h2>
-                    <p>Introduces issue trackers.</p>
-                    <p>Typically takes about 10-15 minutes.</p>
-                    <p>Links: current version is presenter-led only and connected to other tools & intro to open source: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a>.</p>
-                </li>
-                 <li class="mix communications-tools standard ready">
+                 
+                 <li class="mix communication standard ready">
                     <h2>Bug Comprehension</h2>
                     <p>Interactive activity to help read an issue in an issue tracker.</p>
                     <p>Typically takes about 10-15 minutes.</p>
