Added first draft of accessibility activity

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -143,8 +143,9 @@
                 </li>
                 
                 <li class="mix contributions-workshop">
-                    <h2>Task-focused Contributions</h2>
-                    <p>Coming soon!</p>
+                    <h2>Newcomer Tasks</h2>
+                    <p>These guides help newcomers make specific kinds of contributions which are suitable for a variety of projects.</p>
+                    <p>Links: <a href="http://openhatch.github.io/open-source-comes-to-campus/lessons/newcomer-tasks/setup/#/">Improving Setup Instructions</a>; more coming soon!</p>
                 </li>
                 
                 <li class="mix contributions-workshop ready standard">
