--- a/lessons/newcomer-tasks/setup/index.html
+++ b/lessons/newcomer-tasks/setup/index.html
@@ -113,6 +113,7 @@
 				    
 				    <section>
 					    <h2>All Done?</h2>
+					    <p class="float-left">Make sure to record your contribution.  {{ HOW? }}</p>
 					    <p class="float-left">You can repeat this task with a new project, or move on to a different task.</p>
 				    </section>
 				    
