Add what-is-version-control, update lessons index

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -103,13 +103,13 @@
                     <h2>Bug Comprehension</h2>
                     <p>Interactive activity to help read an issue in an issue tracker.</p>
                     <p>Typically takes about 10-15 minutes.</p>
-                    <p>Links: current version is embedded in the intro to open source/tools mega-lecture: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a> but the individual activity can be found: <a href="https://openhatch.org/wiki/Communication">here</a>.</p>
+                    <p>Links: <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum/Tools/Communication">self-guided (or paired)</a> version only.</p>
                 </li>
                 <li class="mix version-control standard ready">
                     <h2>What is version control?</h2>
                     <p>Introduces version control as a concept, using Wikipedia as an example.</p>
                     <p>Typically takes about 10-15 minutes.</p>
-                    <p>Links: current version is presenter-led only and connected to other tools & intro to open source: <a href="https://openhatch.org/wiki/OSCTC/Tools">here</a>.</p>
+                    <p>Links: <a href="http://openhatch.github.io/open-source-comes-to-campus/lessons/what-is-version-control/index.html">presenter-led</a>, <a href="http://openhatch.github.io/open-source-comes-to-campus/lessons/what-is-version-control/self-guided.html">self-guided</a>.</p>
                 </li>
                  <li class="mix version-control ready">
                     <h2>Diff and Patch</h2>
