--- a/lessons/newcomer-tasks/accessibility/index.html
+++ b/lessons/newcomer-tasks/accessibility/index.html
@@ -5,20 +5,19 @@
 		<meta charset="utf-8">
 
 		<title>Accessibility</title>
-
-
+		
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" href="../../css/reveal.min.css">
+		<link rel="stylesheet" href="../../static/reveal/css/reveal.min.css">
 		
-        <link rel="stylesheet" href="../../css/theme/lessons.css" id="theme">
+        <link rel="stylesheet" href="../../static/reveal/css/theme/lessons.css" id="theme">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="../../lib/css/zenburn.css">
+		<link rel="stylesheet" href="../../static/reveal/lib/css/zenburn.css">
 		
 		<!--[if lt IE 9]>
-		<script src="../../lib/js/html5shiv.js"></script>
+		<script src="../lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 	
@@ -64,7 +63,7 @@
                     <section>
 					    <h2>Step 2: Test Projects</h2>
 					    
-					    <img src="../../images/wave_screenshot.png" class="float-left">
+					    <img src="../../../static/images/wave_screenshot.png" class="float-left">
 					    
 					        <p>{{insert paragraph about where to find projects.}}</p>
 					        <p>For each project, identify the main website or websites associated with the project.  Enter those URLS into the <a href="http://wave.webaim.org/">Web Accessibility Evaluation Tool</a> where it says "<i>Web page address...</i>", and take look at the results.</p>
@@ -138,8 +137,9 @@
 
         </div>
 
-        <script src="../../lib/js/head.min.js"></script>
-		<script src="../../js/reveal.min.js"></script>
+
+        <script src="../../static/reveal/lib/js/head.min.js"></script>
+		<script src="../../static/reveal/js/reveal.min.js"></script>
 
 		<script>
 
@@ -160,20 +160,16 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: '../../lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: '../../plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../../plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../../plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: '../../plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: '../../static/reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: '../../static/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../../static/reveal/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: '../../static/reveal/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
 		</script>
 
 	</body>
-</html>
-
-    </body>
-
 </html>
