--- a/lessons/newcomer-tasks/setup/index.html
+++ b/lessons/newcomer-tasks/setup/index.html
@@ -6,19 +6,18 @@
 
 		<title>Setup</title>
 
-
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" href="../../css/reveal.min.css">
+		<link rel="stylesheet" href="../../static/reveal/css/reveal.min.css">
 		
-        <link rel="stylesheet" href="../../css/theme/lessons.css" id="theme">
+        <link rel="stylesheet" href="../../static/reveal/css/theme/lessons.css" id="theme">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="../../lib/css/zenburn.css">
+		<link rel="stylesheet" href="../../static/reveal/lib/css/zenburn.css">
 		
 		<!--[if lt IE 9]>
-		<script src="../../lib/js/html5shiv.js"></script>
+		<script src="../lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 	
@@ -121,8 +120,8 @@
 
         </div>
 
-        <script src="../../lib/js/head.min.js"></script>
-		<script src="../../js/reveal.min.js"></script>
+        <script src="../../static/reveal/lib/js/head.min.js"></script>
+		<script src="../../static/reveal/js/reveal.min.js"></script>
 
 		<script>
 
@@ -143,20 +142,16 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: '../../lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: '../../plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../../plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../../plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: '../../plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: '../../static/reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: '../../static/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../../static/reveal/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: '../../static/reveal/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
 		</script>
 
 	</body>
-</html>
-
-    </body>
-
 </html>
