--- a/lessons/what-is-open-source/self-guided.html
+++ b/lessons/what-is-open-source/self-guided.html
@@ -6,16 +6,15 @@
 
 		<title>What is Open Source?</title>
 
-
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" href="../css/reveal.min.css">
+		<link rel="stylesheet" href="../../static/reveal/css/reveal.min.css">
 		
-        <link rel="stylesheet" href="../css/theme/lessons.css" id="theme">
+        <link rel="stylesheet" href="../../static/reveal/css/theme/lessons.css" id="theme">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="../lib/css/zenburn.css">
+		<link rel="stylesheet" href="../../static/reveal/lib/css/zenburn.css">
 		
 		<!--[if lt IE 9]>
 		<script src="../lib/js/html5shiv.js"></script>
@@ -42,10 +41,10 @@
 				        <table class="logos">
 				            <tbody>
 				                <tr>
-				                    <td><img src="../images/firefox_logo.png" onClick="alert('This is the logo for Firefox.  Firefox is a popular open source web broswer.')"></td><td><img src="../images/tor_logo.png" onClick="alert('Tor is software that allows people to be anonymous online. The onion logo symbolizes the many layers of encryption Tor provides.')"></td><td><img src="../images/banshee_logo.png" onClick="alert('Banshee media player allows you to organize and play music and other media.')"></td><td><img src="../images/wordpress_logo.png" onClick="alert('Wordpress is a very popular blogging platform (it is estimated a fifth of all websites use Wordpress).')"></td>
+				                    <td><img src="../../static/images/firefox_logo.png" onClick="alert('This is the logo for Firefox.  Firefox is a popular open source web broswer.')"></td><td><img src="../../static/images/tor_logo.png" onClick="alert('Tor is software that allows people to be anonymous online. The onion logo symbolizes the many layers of encryption Tor provides.')"></td><td><img src="../../static/images/banshee_logo.png" onClick="alert('Banshee media player allows you to organize and play music and other media.')"></td><td><img src="../../static/images/wordpress_logo.png" onClick="alert('Wordpress is a very popular blogging platform (it is estimated a fifth of all websites use Wordpress).')"></td>
 				                </tr>
 				                <tr>
-				                    <td><img src="../images/ubuntu_logo.png" onClick="alert('Ubuntu is an open source operating system.  It is the most widely used open source desktop system.  It is a distribution of Linux and based off of another popular Linux distribution named Debian.')"></td><td><img src="../images/scipy_logo.png" onClick="alert('SciPy is a set of tools used for scientific and technical computing. It is used for statistical analysis, visualization, data management, and more.')"></td><td><img src="../images/openrov_logo.jpg" onClick="alert('OpenROV is an open source remote-operated underwater vehicle.  It uses open source hardware and software.  It is also low cost, fitting with the community goal of making underwater exploration affordable and accessible.')"></td><td><img src="../images/openmrs_logo.png" onClick="alert('This is the logo for OpenMRS, an open source medical records system.  It was created for use in developing countries and other places where electronic medical record management systems are not affordable.')"></td>
+				                    <td><img src="../../static/images/ubuntu_logo.png" onClick="alert('Ubuntu is an open source operating system.  It is the most widely used open source desktop system.  It is a distribution of Linux and based off of another popular Linux distribution named Debian.')"></td><td><img src="../../static/images/scipy_logo.png" onClick="alert('SciPy is a set of tools used for scientific and technical computing. It is used for statistical analysis, visualization, data management, and more.')"></td><td><img src="../../static/images/openrov_logo.jpg" onClick="alert('OpenROV is an open source remote-operated underwater vehicle.  It uses open source hardware and software.  It is also low cost, fitting with the community goal of making underwater exploration affordable and accessible.')"></td><td><img src="../../static/images/openmrs_logo.png" onClick="alert('This is the logo for OpenMRS, an open source medical records system.  It was created for use in developing countries and other places where electronic medical record management systems are not affordable.')"></td>
 				                </tr>
 				                
 
@@ -110,8 +109,8 @@
 
         </div>
 
-        <script src="../lib/js/head.min.js"></script>
-		<script src="../js/reveal.min.js"></script>
+        <script src="../../static/reveal/lib/js/head.min.js"></script>
+		<script src="../../static/reveal/js/reveal.min.js"></script>
 
 		<script>
 
@@ -132,12 +131,12 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: '../lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: '../plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: '../plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: '../../static/reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: '../../static/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../static/reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../../static/reveal/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: '../../static/reveal/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
@@ -146,6 +145,3 @@
 	</body>
 </html>
 
-    </body>
-
-</html>
