--- a/lessons/what-is-version-control/self-guided.html
+++ b/lessons/what-is-version-control/self-guided.html
@@ -101,7 +101,7 @@
 				    </section>
 				    
 				    <section data-background="../../static/images/vc_chart.png" style="background: rgba(255,255,255,0.98)" class="pad-overlay">	    
-				        <p class="float-left">There are multiple accounts on each host.  For instance, on Github there is an OpenHatch account, and a White Host account, and many more.</p>
+				        <p class="float-left">There are multiple accounts on each host.  For instance, on Github there is an OpenHatch account, and a White House account, and many more.</p>
 				        <p class="float-left">These accounts own repositories.  As many people as want to can create copies of repositories, but there can be only one owner.  If you want, you can keep multiple copies of the same repositories on different hosts that support the same version control system.  For instance, oh-mainline exists on Github, and on our servers, and on many people's laptops!</p>
 				    </section>
 				    
