Switch language re: recording contribution

--- a/lessons/newcomer-tasks/setup/index.html
+++ b/lessons/newcomer-tasks/setup/index.html
@@ -112,7 +112,7 @@
 				    
 				    <section>
 					    <h2>All Done?</h2>
-					    <p class="float-left">Make sure to record your contribution.  You can do this by <a href="http://mergestories.com/submit.html">submitting a merge story</a>  If you don't want to make your merge story public, that's okay -- just put "please keep this private" somewhere in the submission.  (We email every Merge Story author before posting, so we won't post it accidentally.)</p>
+					   <p class="float-left">Make sure to record your contribution.  You can do this by <a href="http://mergestories.com/submit.html">submitting a merge story</a>. (Don't want to make it public?  Just say so anywhere on the submission form.)</p>
 					    <p class="float-left">You can repeat this task with a new project, or move on to a different task.</p>
 				    </section>
 				    
