Added 'why contribute' section to lesson

--- a/lessons/what-is-open-source/self-guided.html
+++ b/lessons/what-is-open-source/self-guided.html
@@ -98,9 +98,12 @@
 
 				    </section>
 				    
-				    <section>
+		            <section>
 				        <h3>Why contribute?</h3>
-				        <p>{insert #whyopensource responses here}</p>
+				        <p>"Open source is important to me because it is a way to learn, to practice, and to share with others." - <a href="http://twitter.com/ajlopez">Angel "Java" Lopez</a></p>
+				        <p>"The sense and strength of community is so powerful, that I couldn't have been happier to be a part of this movement, amazed and humbled by the craziest ideas and work that get shared. In simple words, it changed my life." - <a href="http://github.com/soumith">Soumith Chintala</a></p>
+				        <p>"To me Open Source is a tool in the activist toolbox. It's how we can get things done without having to wait and ask permission, without having to build every. single. thing. we want before we can accomplish great things. We build on each other's work, we build up each other's work together." - <a href="http://lukasblakk.com/">Lukas Blakk</a></p>
+                        <p><a href="https://github.com/nickdesaulniers/What-Open-Source-Means-To-Me/blob/master/README.md">Read more here.</a></p>
 				        <aside class="notes">
 				        </aside>
 				        
