Remove duplicate word
changed changed => changed

--- a/lessons/what-is-open-source/index.html
+++ b/lessons/what-is-open-source/index.html
@@ -74,7 +74,7 @@
 				            <li class="fragment">You can run them for any purpose</li>
 				            <li class="fragment">You can understand and change them</li>
 				            <li class="fragment">You can share copies of them</li>
-				            <li class="fragment">You can share your changed changed copies of them</li>
+				            <li class="fragment">You can share your changed copies of them</li>
 				        </ul>
 				        <p class="filler"></p>
 				        <p class="fragment float-left">These are called the "four freedoms".</p>
