Remove duplicate word
changed changed => changed

--- a/lessons/what-is-open-source/self-guided.html
+++ b/lessons/what-is-open-source/self-guided.html
@@ -59,7 +59,7 @@
 				            <li>You can run them for any purpose</li>
 				            <li>You can understand and change them</li>
 				            <li>You can share copies of them</li>
-				            <li>You can share your changed changed copies of them</li>
+				            <li>You can share your changed copies of them</li>
 				        </ul>
 				        <p class="filler"></p>
 				        <p>These are called the "four freedoms".  (No, not <a href="http://en.wikipedia.org/wiki/Four_Freedoms" target="_blank">those ones</a>, <a href="http://en.wikipedia.org/wiki/Free_software#Definition" target="_blank">these ones</a>!)</p>
