Add self-referrential link to short slides title page

--- a/lessons/short/index.html
+++ b/lessons/short/index.html
@@ -38,7 +38,7 @@
 			    	    <li>Sign in & grab some sticky notes!</li>
 			    	    <li>Go through Laptop Setup: <a href="bit.ly/laptop-setup">bit.ly/laptop-setup</a></li>
 			    	    <li>Sign up for a github account: <a href="https://github.com/">https://github.com</a></li>
-			    	    <li>Find these slides online (if you want): <a href=""></a></li>
+			    	    <li>Find these slides online (if you want): <a href="bit.ly/openhatch-short-slides">bit.ly/openhatch-short-slides</a></li>
 			    	    </ul>
 				    </section>
 				    
